--- a/podcastr/src/components/Player/styles.module.scss
+++ b/podcastr/src/components/Player/styles.module.scss
@@ -25,8 +25,8 @@
   footer {
     align-self: stretch;
 
-    &.empty {
-      opacity: 0.5;
+    &.empty .progress {
+      opacity: 0.3;
     }
   }
 }
@@ -127,6 +127,7 @@
 
     &:disabled {
       cursor: default;
+      opacity: 0.3;
     }
   }
 }
