--- a/podcastr/src/components/Player/styles.module.scss
+++ b/podcastr/src/components/Player/styles.module.scss
@@ -76,13 +76,15 @@
 .progress {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.875rem;
   font-size: 0.875rem;
 
   span {
     display: inline-block;
     width: 4rem;
     text-align: center;
+    font-feature-settings: "tnum";
+    font-variant-numeric: tabular-nums;
   }
 
   .slider {
@@ -128,6 +130,15 @@
     &:disabled {
       cursor: default;
       opacity: 0.3;
+    }
+
+    &.isActive {
+      filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+
+      &:hover {
+        filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg)
+          brightness(0.8);
+      }
     }
   }
 }
