create add new question action

--- a/letmeask/src/styles/button.scss
+++ b/letmeask/src/styles/button.scss
@@ -2,11 +2,10 @@
   background-color: #835afd;
   border-radius: 8px;
   border: 0;
-  color: #fff;
+  color: #f8f8f8;
   cursor: pointer;
   font-weight: 500;
   height: 50px;
-  margin-top: 64px;
   padding: 0 32px;
   transition: filter 0.2s;
 
