--- a/letmeask/src/styles/room.scss
+++ b/letmeask/src/styles/room.scss
@@ -63,6 +63,7 @@
         display: flex;
         justify-content: space-between;
         margin-top: 16px;
+        margin-bottom: 32px;
 
         > span {
           color: #737380;
