--- a/letmeask/src/styles/room.scss
+++ b/letmeask/src/styles/room.scss
@@ -13,6 +13,16 @@
       > a img {
         max-height: 45px;
       }
+
+      div {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+
+        button {
+          height: 40px;
+        }
+      }
     }
   }
 
