--- a/letmeask/src/styles/question.scss
+++ b/letmeask/src/styles/question.scss
@@ -3,9 +3,25 @@
   border-radius: 8px;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.04);
   padding: 24px;
+  border: 1px solid transparent;
+  transition: 0.3s;
 
   & + .question {
     margin-top: 8px;
+  }
+
+  &.highlight {
+    background: #f4f0ff;
+    border-color: #835afd;
+    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.12);
+
+    footer .user-info span {
+      color: #29292e;
+    }
+  }
+
+  &.answered {
+    background-color: #dbdcdd;
   }
 
   p {
@@ -31,8 +47,12 @@
       span {
         color: #737380;
         font-size: 14px;
-        margin-left: 8px;
       }
+    }
+
+    > div {
+      display: flex;
+      gap: 8px;
     }
 
     button {
