--- a/letmeask/src/styles/auth.scss
+++ b/letmeask/src/styles/auth.scss
@@ -1,12 +1,5 @@
 #page-auth {
-  display: flex;
-  align-items: stretch;
-  height: 100vh;
-
   aside {
-    flex: 7;
-    max-width: 47%;
-
     background-color: #835afd;
     color: #fff;
 
@@ -14,10 +7,11 @@
     flex-direction: column;
     justify-content: center;
 
-    padding: 120px 80px;
+    padding: 40px 80px;
 
     img {
-      width: 320px;
+      margin: 0 auto;
+      width: 160px;
     }
 
     strong {
@@ -25,18 +19,18 @@
       font-size: 36px;
       font-weight: 700;
       line-height: 42px;
-      margin-top: 16px;
+      margin: 16px auto;
       max-width: 440px;
     }
 
     p {
-      font-size: 24px;
-      line-height: 32px;
-      margin-top: 16px;
       color: #f8f8f8;
+      font-size: 24px;
       font-weight: 400;
-      opacity: 0.7;
+      line-height: 32px;
+      margin: 0 auto;
       max-width: 450px;
+      opacity: 0.7;
     }
   }
 
@@ -45,9 +39,10 @@
 
     padding: 0 32px;
 
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: center;
+    margin: 64px auto;
   }
 
   .main-content {
@@ -153,6 +148,31 @@
 
     &::after {
       margin-left: 16px;
+    }
+  }
+}
+
+@media (min-width: 940px) {
+  #page-auth {
+    align-items: stretch;
+    display: flex;
+    height: 100vh;
+
+    aside {
+      flex: 7;
+      max-width: 47%;
+
+      img {
+        margin: 0 auto 0 0;
+        width: 320px;
+      }
+      p {
+        margin: 0 auto 0 0;
+      }
+
+      strong {
+        margin: 16px auto 16px 0;
+      }
     }
   }
 }
